# Dissertation-AI-Intrusion-in-Robotics

./: Model1_results.csv  Model2_results.csv  Model3_results.csv  README.md  SessionMapping.csv  batch_scenarios.py  eval-2.py  eval_1.py  eval_3.py  log.csv  log_models.csv  robotics-program.py  test-generator.py
Training/: feature-extract.py  test1_results.csv  test2_results.csv  test3_results.csv  train_model-1.py  training1.py  training2.py  training3.py
cpp_robot/: CMakeLists.txt  package.xml
cpp_robot/install/cpp_robot/share/cpp_robot/: package.bash  package.dsv  package.sh  package.zsh
cpp_robot/install/cpp_robot/share/cpp_robot/cmake/: cpp_robot__rosidl_typesupport_cExport-noconfig.cmake  cpp_robot__rosidl_typesupport_cExport.cmake  cpp_robot__rosidl_typesupport_cppExport-noconfig.cmake  cpp_robot__rosidl_typesupport_cppExport.cmake  cpp_robot__rosidl_typesupport_introspection_cExport-noconfig.cmake  cpp_robot__rosidl_typesupport_introspection_cExport.cmake  cpp_robot__rosidl_typesupport_introspection_cppExport-noconfig.cmake  cpp_robot__rosidl_typesupport_introspection_cppExport.cmake  export_cpp_robot__rosidl_generator_cExport-noconfig.cmake  export_cpp_robot__rosidl_generator_cExport.cmake  export_cpp_robot__rosidl_generator_cppExport.cmake  export_cpp_robot__rosidl_generator_pyExport-noconfig.cmake  export_cpp_robot__rosidl_generator_pyExport.cmake  export_cpp_robot__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_cpp_robot__rosidl_typesupport_fastrtps_cExport.cmake  export_cpp_robot__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_cpp_robot__rosidl_typesupport_fastrtps_cppExport.cmake
cpp_robot/models/Model1/: features.txt  model.pt  model_sibling.pt  scalar.pk1  scaler_mean.csv  scaler_mean_sib.csv  scaler_scale.csv  scaler_scale_sib.csv  threshold.txt  threshold_sib.txt
cpp_robot/models/Model2/: features.txt  model.pt  model_sib.pt  scalar.pk1  scaler_mean.csv  scaler_mean_sib.csv  scaler_scale.csv  scaler_scale_sib.csv  threshold.txt  threshold_sib.txt
cpp_robot/models/Model3/: features.txt  model.pt  model_sib.pt  scaler_mean.csv  scaler_mean_sib.csv  scaler_scale.csv  scaler_scale_sib.csv  threshold.txt  threshold_sib.txt
cpp_robot/src/: AnomalyDetector.cpp  keyin_client.cpp  keyin_client.cpp.save  robot_client.cpp  robot_server.cpp  robot_server.cpp.save
cpp_robot/srv/: GetPosition.srv  MoveDirection.srv
cpp_robot/utils/: AnomalyDetector.h  monitor.cpp  monitor.cpp.save  monitor.hpp
